Show hint on IllegalAccessError during shape creation