@@ -31,6 +31,7 @@ import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 
+import com.oracle.truffle.api.TruffleLogger;
 import org.graalvm.home.HomeFinder;
 import org.graalvm.home.Version;
 import org.graalvm.options.OptionDescriptors;
@@ -452,7 +453,17 @@ public final class EspressoLanguage extends TruffleLanguage<EspressoContext> {
     @TruffleBoundary
     private StaticShape<StaticObjectFactory> createArrayShape() {
         assert arrayShape == null;
-        return StaticShape.newBuilder(this).property(arrayProperty, Object.class, true).build(StaticObject.class, StaticObjectFactory.class);
+        try {
+            return StaticShape.newBuilder(this).property(arrayProperty, Object.class, true).build(StaticObject.class, StaticObjectFactory.class);
+        } catch (IllegalAccessError e) {
+            if (EspressoLanguage.class.getModule().isNamed()) {
+                TruffleLogger.getLogger(ID).warning("""
+                                IllegalAccessError while trying static shape from espresso module.
+                                You might need to use the following java argument to work around:
+                                --add-exports=org.graalvm.espresso/com.oracle.truffle.espresso.runtime=ALL-UNNAMED""");
+            }
+            throw e;
+        }
     }
 
     public StaticProperty getForeignProperty() {
